[project]
name = "recipes-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi==0.128.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "uvicorn==0.40.0",
  "ingredient-parser-nlp==1.2.0",
  "recipe-scrapers==15.11.0",
  "lxml==6.0.2",
  "httpx==0.28.1",
  "quantulum3[classifier]==0.9.2",
  "setuptools==75.3.0",
  # Pinned version because of pickled data :(
  "scikit-learn==1.8.0",
]

[dependency-groups]
dev = ["pytest==8.3.5", "ruff==0.14.11"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
ignore = ["F403", "B008"]
select = [
  "E", # pycodestyles
  "F", # pyflakes
  "I", # isort
  "T", # flake8-print
  "B", # flake8-bugbear
]
