[project]
name = "recipes-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
  "fastapi==0.139.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "uvicorn==0.51.0",
  "ingredient-parser-nlp==2.7.0",
  "recipe-scrapers==15.11.0",
  "httpx==0.28.1",
  "quantulum3[classifier]==0.10.0",
  # Pinned to match the scikit-learn version quantulum3's pickled classifier
  # was built with (quantulum3 0.10.0 -> scikit-learn 1.8.0).
  "scikit-learn==1.8.0",
]

[dependency-groups]
dev = ["pytest==9.1.1", "ruff==0.15.21"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
ignore = ["F403", "B008"]
select = [
  "E", # pycodestyles
  "F", # pyflakes
  "I", # isort
  "T", # flake8-print
  "B", # flake8-bugbear
]
